2016-11-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.4

	* README.md: Canonical URL, added Installation note, minor edits

2016-11-12  Dirk Eddelbuettel  <edd@debian.org>

	* inst/replacements/manual-page-stub.Rd: Updated making use of the
	various macros defined in ${RHOME}/share/Rd/macros/system.Rd and
	described Section 2.13 of Writing R Extensions

	* NAMESPACE: Added explicit import for package.skeleton

2015-06-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.3

2015-06-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Suggests): Versioned Suggests: on whomai (>= 1.1.0)

	* R/pkgKitten.R (kitten): Use default value with email and name
	gathering functions (now offered by whoami 1.1.0 or later)

2015-06-09  Dirk Eddelbuettel  <edd@debian.org>

	* R/pkgKitten.R (kitten): Use email and name gathering functions from
	package 'whoami' (if available) in case email and name were not
	given; also rewrite Title: and Description: in a form that actually
	passes R CMD check --as-cran

	* man/kitten.Rd: Updated accordingly

	* DESCRIPTION (Suggests): Add whoami

	* .travis.yml (install): Add installation of whomai

2015-02-26  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (language): Using new native R support at Travis -- and
	reverted after realizing it leads to several additional minutes of
	forced installation of things we do not need

2014-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.2

	* R/pkgKitten.R (kitten): Correctly invoke new function

2014-09-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.1

	* inst/NEWS.Rd: Added

2014-09-07  Dirk Eddelbuettel  <edd@debian.org>

	* R/pkgKitten.R: New function playWithPerPackageHelpPage() to create
	a basic per-package manual page which purrs
	* man/playWithPerPackageHelpPage.Rd: Documentation for new function
	* NAMESPACE: Export new function

2014-06-13  Dirk Eddelbuettel  <edd@debian.org>
